Application-CD/WEB/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
